# nanochat

./: CHANGELOG.md  README.md  pyproject.toml
dev/: LEADERBOARD.md  estimate_gpt3_core.ipynb  gen_synthetic_data.py  repackage_data_reference.py  scaling_analysis.ipynb  verify_dataloader_resume.py  verify_e2e_parity.py  verify_single_process_step.py
docs/: checkpoint-manager-design.md  cli-backend-integration.md  code-structure.md  config-manager-design.md  dual-trainer-architecture.md  entry-point-refactor.md  m3-max-guide.md  mlx-analysis-phase6.md  mlx-analysis.md  mlx-gpt-design.md  mlx-muon-design.md  mlx-performance.md  phase-1.5.1-validation-checklist.md  roadmap.md  scheduler-placement-study.md  trainer-implementation-plan.md  training-state-refactor.md  workspace-design.md
docs/archive/: config-manager-design.md  mlx-analysis-phase5.md  mlx-integration-guidelines.md  workspace-design.md
docs/design/: README.md  checkpoint-interop.md  code-structure.md  data-layout.md  mlx-backend.md  mlx-gpt-design.md  mlx-muon-design.md  mlx-training-patterns.md  trainer-protocol.md
docs/dev/: README.md  lazy-grad-accumulation.md  mlx-dataloader-analysis.md  mlx-eval-bpb.md  mlx-sft-rl-plan.md  phase-1.5.1-validation-checklist.md  roadmap.md
docs/dev/archive/: dual-trainer-architecture.md  mlx-analysis-phase4.md  mlx-analysis-phase6.md  mlx-analysis.md
docs/dev/experiments/: exp2-compression-validation.md  note-val-bnp-increasing.md  test_compiled_nan.py
docs/dev/tasks/: README.md  r1-mlx-engine.md  r2-mlx-gpt-per-token-loss.md  r3-mlx-rl-trainer.md  r4-rl-mlx-loop.md  s1-mlx-gpt-masked-ce.md  s2-sft-mlx-setup.md  s3-sft-loop-basetrainer.md
docs/guides/: README.md  integrating-upstream.md  mlx-guide.md  quickstart.md  tuning-guide.md
runs/: bench-batch-size.sh  exp1b-safetensors-smoke.sh  exp2-compression-validation.sh  exp2b-compile-fix-smoke.sh  scaling_laws.sh  speedrun.sh
scripts/: convert_karpathy_d32.py
src/nanochat/: cli.py  model_factory.py  workspace.py
src/nanochat/chat/: chat_cli.py  chat_web.py
src/nanochat/checkpoint/: __init__.py  compat.py  convert.py  discovery.py  factory.py  logger.py  protocol.py  safetensors_manager.py  torch_manager.py
src/nanochat/common/: __init__.py  distributed.py  hardware.py  io.py  mlx.py  wandb.py
src/nanochat/config/: __init__.py  checkpoint.py  common.py  config.py  current.py  evaluation.py  loader.py  rl.py  sft.py  training.py
src/nanochat/dataset/: __init__.py  climbmix.py  utils.py
src/nanochat/evaluation/: __init__.py  base_eval.py  chat_eval.py  engine.py  (+3 more)
tests/: conftest.py  test_attention_fallback.py  test_config.py  test_engine.py  test_model_factory.py
tests/test_checkpoint/: test_compat.py  test_discovery.py  test_factory.py  test_protocol.py  test_safetensors_manager.py  test_torch_manager.py
tests/test_common/: test_dtype.py  test_io.py  test_paths.py  test_wandb.py
tests/test_compression/: test_metrics.py
tests/test_config/: test_config.py  test_current.py  test_loader.py
tests/test_integration/: test_workflows.py
tests/test_models/: test_config.py  test_gpt.py  test_mlx_gpt.py
tests/test_report/: test_base.py
tests/test_tasks/: test_base.py
tests/test_tokenizer/: test_rust_tokenizer.py
tests/test_training/: test_checkpoint.py  test_compression_math.py  test_mlx_engine.py  test_mlx_optimizer.py  test_mlx_rl_trainer.py  test_mlx_trainer.py  test_optimizer.py  test_schedulers.py  test_torch_trainer.py
tests/test_workspace/: test_workspace.py
(+55 files in other folders)
