[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "filelock>=3.0.0",
    "ipykernel>=7.1.0",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "psutil>=7.1.0",
    "python-dotenv>=1.2.1",
    "regex>=2025.9.1",
    "rustbpe>=0.1.0",
    "safetensors>=0.4.0",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "tomli-w>=1.0.0",
    "torch==2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
    "zstandard>=0.25.0",
    "mlx>=0.26.0; sys_platform == 'darwin'",
    "mlx>=0.31.1",
]

[project.scripts]
nanochat = "nanochat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanochat"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8, CPU, or MPS (Apple Silicon)
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
    # mps: no index override, standard PyPI wheel includes MPS support
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "torch==2.9.1",
]
gpu = [
    "torch==2.9.1",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnusedImport = true
reportUnusedVariable = true
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportFunctionMemberAccess = false
reportAttributeAccessIssue = false
reportIncompatibleMethodOverride = false
reportOptionalMemberAccess = false
reportUntypedFunctionDecorator = false
reportPrivateUsage = false
reportCallIssue = false
reportArgumentType = false
reportConstantRedefinition = false
reportPrivateImportUsage = false
reportOperatorIssue = false

[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = "none"

[[tool.pyright.executionEnvironments]]
root = "dev"
reportMissingParameterType = "none"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long
    "E722",  # Bare except (intentional in some cases)
    "E731",  # Lambda assignment (common pattern in ML code)
    "N801",  # Class name conventions (redirect_stdin is intentional)
    "N803",  # Argument naming (B, T are standard in ML)
    "N806",  # Variable naming (B, T, H, D, X, A are standard in ML)
    "N812",  # Lowercase imported as non-lowercase (F for functional is standard)
    "N818",  # Exception naming (TimeoutException is fine)
]
